# tartan

./: .gitignore  README.md  tags
00.Project_Artifacts_Final_Phase1_Phase2/Phase_1/Source/Common/: NetworkManager.cpp
00.Project_Artifacts_Final_Phase1_Phase2/Phase_1/Source/LgFaceRecDemoTCP_Jetson_NanoV2/: restart_server.sh  tartan_user.db
00.Project_Artifacts_Final_Phase1_Phase2/Phase_1/Source/LoginProto/: Login
00.Project_Artifacts_Final_Phase1_Phase2/Phase_1/Source/SendImageTCP/: SendImageTCP.cpp
00.Project_Artifacts_Final_Phase1_Phase2/Phase_1/Source/SendImageTcpOverProto/: SendImageTCP.cpp
00.Project_Artifacts_Final_Phase1_Phase2/Phase_1/Source/certs/: cert.pem
00.Project_Artifacts_Final_Phase1_Phase2/Phase_1/Source/firewall/: network-firewall.service
00.Project_Artifacts_Final_Phase1_Phase2/Phase_1/StaticAnalysis/: cppcheck_client.xml  cppcheck_server.txt  flawfinder_client_output.html
00.Project_Artifacts_Final_Phase1_Phase2/Phase_1/TestWithTestcase/: TestCase v1.0.xlsx
00.Project_Artifacts_Final_Phase1_Phase2/Phase_1/ThreatModeling/: New_jetson_threat_model_v1.tm7
Common/: NetworkManager.h  NetworkTCP.cpp  NetworkTCP.h  ProtocolDef.h  TcpSendRecvJpeg.cpp  TcpSendRecvJpeg.h
Common/Protocol/: BaseProtocol.cpp  BaseProtocol.h  ImageProtocol.cpp  ImageProtocol.h  LoginProtocol.cpp  LoginProtocol.h  MyProtocol.cpp  MyProtocol.h  ProtoBuff.cpp  ProtoBuff.h  ProtocolDef.h  ProtocolManager.cpp  ProtocolManager.h  protocol.pb.cc  protocol.pb.h  protocol.proto  protocolLogin.pb.cc  protocolLogin.pb.h  protocolLogin.proto
Common/Protocol/Msg/: gen.sh  protocolImage.pb.cc  protocolImage.pb.h  protocolImage.proto  protocolLogin.pb.cc  protocolLogin.pb.h  protocolLogin.proto
LgFaceRecDemoTCP_Jetson_NanoV2/: CMakeLists.txt  log.sh  tartan.db  tartan.service  tartan_install.sh
LgFaceRecDemoTCP_Jetson_NanoV2/MTCNN_FaceDetection_TensorRT/git/: index
LgFaceRecDemoTCP_Jetson_NanoV2/certs/: private.pem
LgFaceRecDemoTCP_Jetson_NanoV2/mtCNNModels/: det1_relu1.engine  det1_relu2.engine  det1_relu3.engine  det1_relu4.engine  det1_relu6.engine  det1_relu7.engine  det3_relu.engine
LgFaceRecDemoTCP_Jetson_NanoV2/src/: NetworkTCP.cpp  NetworkTCP.h  TcpSendRecvJpeg.cpp  TcpSendRecvJpeg.h  auth.cpp  auth.h  comm.cpp  comm.h  common.h  cyper.cpp  cyper.h  faceNet.cpp  faceNet.h  imgproc.cpp  imgproc.h  main.cpp  main.h  mydb.cpp  mydb.h  mymsg.h  읽어보셈.txt
LoginProto/: .Login.cpp.swp  Login  Login.cpp  build.sh
Project_Artifacts_Final_Phase1_Phase2/Phase_1/Source/Common/: NetworkTCP.h  TcpSendRecvJpeg.cpp
Project_Artifacts_Final_Phase1_Phase2/Phase_1/Source/LgFaceRecDemoTCP_Jetson_NanoV2/: tartan_install.sh
Project_Artifacts_Final_Phase1_Phase2/Phase_1/StaticAnalysis/: flawfinder_server_output.html
Project_Artifacts_Final_Phase1_Phase2/Phase_1/ThreatModeling/: New_jetson_threat_model_v1.htm
Project_Artifacts_Final_Phase1_Phase2/Phase_2/Static_analysis/: flawfinder_output.html
Project_Artifacts_Final_Phase1_Phase2/Phase_2/Test_with_Testcase/: Test_with_TestCases.xlsx
RecvImageTCP/: RecvImageTCP.cpp  build.sh
SendImageTCP/: SendImageTCP  build.sh
SendImageTcpOverProto/: SendImageTCP  SendImageTCP.cpp  build.sh
firewall/: install.sh  network-firewall  rule.conf
gen_sinbak_cert_script/: gen-server.sh  openssl.cnf
(+27 files in other folders)
